# mai8_OOP1

./: CMakeLists.txt  closest_pair.cpp  closest_pair.h  main.cpp  test_closest_pair.cpp
include/: closest_pair.h
src/: closest_pair.cpp
test/: test_closest_pair.cpp
